# ChangeLog for dev-perl/URI
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/URI/ChangeLog,v 1.76 2010/04/09 07:26:03 tove Exp $

  09 Apr 2010; Torsten Veller <tove@gentoo.org> -URI-1.51.ebuild,
  -URI-1.52.ebuild, -URI-1.53.ebuild:
  Cleanup

*URI-1.54 (07 Apr 2010)

  07 Apr 2010; Torsten Veller <tove@gentoo.org> +URI-1.54.ebuild:
  Version bump

*URI-1.53 (15 Mar 2010)

  15 Mar 2010; Torsten Veller <tove@gentoo.org> +URI-1.53.ebuild:
  Version bump

  14 Jan 2010; Fabian Groffen <grobian@gentoo.org> URI-1.52.ebuild:
  Transfer Prefix keywords

*URI-1.52 (31 Dec 2009)

  31 Dec 2009; Torsten Veller <tove@gentoo.org> +URI-1.52.ebuild:
  Version bump

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -URI-1.50.ebuild:
  Cleanup

*URI-1.51 (24 Nov 2009)

  24 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +URI-1.51.ebuild:
  Version bump via perl-bump experimental tool.

*URI-1.50 (22 Nov 2009)

  22 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +URI-1.50.ebuild:
  Version bump via perl-bump experimental tool.

  19 Sep 2009; Torsten Veller <tove@gentoo.org> -URI-1.35.ebuild,
  -URI-1.37.ebuild:
  Cleanup

  14 Sep 2009, Tom Gall <tgall@gentoo.org> URI-1.38.ebuild:
  stable on ppc64, bug #278039

  26 Jul 2009; Marcus D. Hanwell <cryos@gentoo.org> URI-1.38.ebuild:
  Stable on amd64, bug 278039.

  19 Jul 2009; nixnut <nixnut@gentoo.org> URI-1.38.ebuild:
  ppc stable #278039

  17 Jul 2009; Raúl Porcel <armin76@gentoo.org> URI-1.38.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #278039

  17 Jul 2009; Jeroen Roovers <jer@gentoo.org> URI-1.38.ebuild:
  Stable for HPPA (bug #278039).

  16 Jul 2009; Christian Faulhammer <fauli@gentoo.org> URI-1.38.ebuild:
  stable x86, bug 278039

  16 Jul 2009; Ferris McCormick <fmccor@gentoo.org> URI-1.38.ebuild:
  Sparc stable, bug #278039.

*URI-1.38 (28 May 2009)

  28 May 2009; Torsten Veller <tove@gentoo.org> +URI-1.38.ebuild:
  Version bump
