@@ -1,0 +1,21 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/URI/Attic/URI-1.55.ebuild,v 1.1 2010/09/02 06:25:31 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=GAAS
+inherit perl-module
+
+DESCRIPTION="A URI Perl Module"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+DEPEND="virtual/perl-MIME-Base64"
+RDEPEND="${DEPEND}"
+
+SRC_TEST=no # see ChangeLog
+
+mydoc="rfc2396.txt"
