@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/URI
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/URI/ChangeLog,v 1.76 2010/04/09 07:26:03 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/URI/ChangeLog,v 1.77 2010/09/02 06:25:31 tove Exp $
+
+*URI-1.55 (02 Sep 2010)
+
+  02 Sep 2010; Torsten Veller <tove@gentoo.org> +URI-1.55.ebuild:
+  Version bump
 
   09 Apr 2010; Torsten Veller <tove@gentoo.org> -URI-1.51.ebuild,
   -URI-1.52.ebuild, -URI-1.53.ebuild:
